--- a/tex/reciprocal.tex
+++ b/tex/reciprocal.tex
@@ -97,14 +97,14 @@
 
     \begin{align*}
         b_{-n_0} &= \frac1{a_{n_0}} \\
-        b_{k-n_0}
+        b_{k}
         &=
         -
         \frac1{a_{n_0}}
-        \sum\limits_{n=1}^{k}
+        \sum\limits_{n=1}^{k+n_0}
         a_{n+n_0}
-        b_{k-n-n_0}
-        \quad;\quad k>0
+        b_{k-n}
+        \quad;\quad k>-n_0
     \end{align*}
 
 \end{document}
