--- a/tex/recursion.tex
+++ b/tex/recursion.tex
@@ -171,7 +171,7 @@
         \\
         c_{0,m>0}
         &=
-        \frac{\ln^m(\delta)}{m}
+        \frac{1}{m}
         \sum\limits_{k=k_0}^{-2}
         a_k(f_1;x)
         c_{-2-k,m-1}(f_2,\cdots,f_N;x)
